--- a/imported_project_report.html
+++ b/imported_project_report.html
@@ -381,7 +381,7 @@ h3 {
 }
 </style>
 <title>
-Project Import Report for ecen-5823-mesh-node</title>
+Project Import Report for course-project-pshiralagi</title>
 </head>
 <body>
 <h1>
@@ -391,19 +391,19 @@ Project Import Summary</h1>
 <td style="border:1px solid">
 Import time</td>
 <td style="border:1px solid">
-Apr 10, 2020 11:06:59 AM</td>
+Apr 14, 2020 11:49:52 PM</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original location</td>
 <td style="border:1px solid">
-C:\Users\pkshi\SimplicityStudio\v4_workspace\ecen-5823-mesh-node\.cproject</td>
+C:\Users\pkshi\SimplicityStudio\v4_workspace\course-project-pshiralagi\.cproject</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
 Original project name</td>
 <td style="border:1px solid">
-ecen-5823-mesh-node</td>
+course-project-pshiralagi</td>
 </tr>
 <tr style="border:1px solid">
 <td style="border:1px solid">
